scaffold/typescript-go-main/testdata/baselines/reference/submodule/compiler/interfaceMergeWithNonGenericTypeArguments.errors.txt
interfaceMergeWithNonGenericTypeArguments.ts(4,34): error TS2315: Type 'SomeBaseClass' is not generic.


==== interfaceMergeWithNonGenericTypeArguments.ts (1 errors) ====
    export class SomeBaseClass { }
    export interface SomeInterface { }
    export interface MergedClass extends SomeInterface { }
    export class MergedClass extends SomeBaseClass<any> {
                                     ~~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'SomeBaseClass' is not generic.
    	public constructor() {
    		super();
    	}
    }